<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_detail_pattern"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/fd2"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/button_green"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textPoint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/point"
                android:textColor="@color/blanc"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textPoint2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blanc"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/button_green"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textLevel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/level"
                android:textColor="@color/blanc"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textLevel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blanc"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/button_green"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textNbPart"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/nbPart"
                android:textColor="@color/blanc"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textNbPart2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blanc"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/button_green"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textNbWrong"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/nbWrong"
                android:textColor="@color/blanc"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textNbWrong2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blanc"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/button_green"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textnbAverage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/nbAverage"
                android:textColor="@color/blanc"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textnbAverage2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blanc"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/button_green"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textnbQuestion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/nbQuestion"
                android:textColor="@color/blanc"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textnbQuestion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blanc"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>