<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fd2"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageLose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/image"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/button_green"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textPointLose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pointLose"
            android:textColor="@color/blanc"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textPointLose2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blanc"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/button_green"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textNbQuestionLose"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/nbQuestionLose"
            android:textColor="@color/blanc"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textNbQuestionLose2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blanc"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >
        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/imageFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_facebook" />
    </LinearLayout>

</LinearLayout>